--- a/404.html
+++ b/404.html
@@ -7,11 +7,11 @@
     <meta name="description" content="Peronal homepage.">
     <link rel="icon" href="/github.svg">
     
-    <link rel="preload" href="/assets/css/0.styles.03af3d24.css" as="style"><link rel="preload" href="/assets/js/app.26f6c6b4.js" as="script"><link rel="preload" href="/assets/js/7.073756ef.js" as="script"><link rel="prefetch" href="/assets/js/2.63d29cf2.js"><link rel="prefetch" href="/assets/js/3.4f03b43b.js"><link rel="prefetch" href="/assets/js/4.1bc3d814.js"><link rel="prefetch" href="/assets/js/5.40ae369c.js"><link rel="prefetch" href="/assets/js/6.50ec2363.js"><link rel="prefetch" href="/assets/js/8.5848f57a.js">
+    <link rel="preload" href="/assets/css/0.styles.03af3d24.css" as="style"><link rel="preload" href="/assets/js/app.74d85a03.js" as="script"><link rel="preload" href="/assets/js/7.073756ef.js" as="script"><link rel="prefetch" href="/assets/js/2.63d29cf2.js"><link rel="prefetch" href="/assets/js/3.e9dc86a2.js"><link rel="prefetch" href="/assets/js/4.1bc3d814.js"><link rel="prefetch" href="/assets/js/5.40ae369c.js"><link rel="prefetch" href="/assets/js/6.50ec2363.js"><link rel="prefetch" href="/assets/js/8.5848f57a.js">
     <link rel="stylesheet" href="/assets/css/0.styles.03af3d24.css">
   </head>
   <body>
-    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>There's nothing here.</blockquote> <a href="/" class="router-link-active">Take me home.</a></div></div><div class="global-ui"></div></div>
-    <script src="/assets/js/app.26f6c6b4.js" defer></script><script src="/assets/js/7.073756ef.js" defer></script>
+    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>That's a Four-Oh-Four.</blockquote> <a href="/" class="router-link-active">Take me home.</a></div></div><div class="global-ui"></div></div>
+    <script src="/assets/js/app.74d85a03.js" defer></script><script src="/assets/js/7.073756ef.js" defer></script>
   </body>
 </html>
